syntax = "proto3";
option java_package = "toy.proto";
package proto;
//option java_multiple_files = true;

import "types.proto";

service BlockchainService {
    rpc addTransaction(Transaction) returns (accepted) {};
    rpc getTransaction(read) returns (approved) {};
}